@@ -3,8 +3,6 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- one line rect sel: strange insert behavior
-- s&r dialog: if selection selected and no selection, warn
 - auto indent: don't de-indent on enter if no leading indent at all?
 - update quicknotepad docs
 - actions/dockables eval: should use own namespace?
@@ -63,7 +61,6 @@ and quirks that I need to fix eventually.
      bar)
   <--- wrong
 - add config flag for deep indent
-- choose directory dialog needs some work
 - tall caret and tab
 - tall caret and backspace
 - change of AT_WORD_START semantics to fix perl highlighting?
